--- a/style.css
+++ b/style.css
@@ -84,8 +84,8 @@ ul {
   width: 5.3rem;
   display: inline;
   justify-content: space-between;
-} /*
-.grid-3 a {
-  display: inline-table;
-  justify-content: space-between;
-}*/
+}
+
+
+
+
