--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ ul {
   justify-content: space-between;
 }*/
 
-@media screen and (max-width: 40rem) {
+@media screen and (max-width: 35rem) {
   .grid-container {
     width: 100%;
     margin-left: auto;
@@ -108,6 +108,8 @@ ul {
     padding-top: 3rem;
     align-self: center;
   }
+  p {
+    align-self: center;
 
   .mockup {
     width: 80%;
