--- a/style.css
+++ b/style.css
@@ -107,9 +107,8 @@ ul {
     text-align: center;
     padding-top: 3rem;
     align-self: center;
+    overflow: auto;
   }
-  p {
-    align-self: center;
 
   .mockup {
     width: 80%;
