--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@
   --poppins: "Poppins", sans-serif;
   --open-sans: "Poppins", sans-serif;
 }
-body {
-  width: 100;
-}
+
 /*
+body {
+  width: 100%;
+}
+
 .container {
   background-image: url(/images/bg-desktop.svg);
   background-color: var(--Violet);
@@ -95,9 +97,9 @@ ul {
   justify-content: space-between;
 }*/
 
-@media screen and (max-width: 40rem) {
+@media screen and (max-width: 35rem) {
   .grid-container {
-    width: 90%;
+    width: 100%;
     background-size: cover;
     margin-left: auto;
     margin-right: auto;
@@ -110,6 +112,7 @@ ul {
     align-self: center;
   }
   p {
+    font-size: 100%;
     margin-right: 1rem;
 
   .mockup {
