--- a/style.css
+++ b/style.css
@@ -97,23 +97,20 @@ ul {
   justify-content: space-between;
 }*/
 
-@media screen and (max-width: 35rem) {
+@media screen and (max-width: 50rem) {
   .grid-container {
     width: 100%;
-    background-size: cover;
     margin-left: auto;
     margin-right: auto;
     margin-top: auto;
     margin-bottom: auto;
   }
   .heading {
+    padding: 0;
     text-align: center;
     padding-top: 3rem;
     align-self: center;
   }
-  p {
-    font-size: 100%;
-    margin-right: 1rem;
 
   .mockup {
     width: 80%;
