--- a/style.css
+++ b/style.css
@@ -98,15 +98,18 @@ ul {
 }*/
 
 @media screen and (max-width: 50rem) {
+  body {
+    padding: 0;
+    margin: 0;
+  }
   .grid-container {
     width: 100%;
-    margin-left: auto;
+    /*margin-left: auto;
     margin-right: auto;
     margin-top: auto;
-    margin-bottom: auto;
+    margin-bottom: auto;*/
   }
   .heading {
-    padding: 0;
     text-align: center;
     padding-top: 3rem;
     align-self: center;
