--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ ul {
     margin-top: auto;
     margin-bottom: auto;*/
   }
-  .heading {
+  h1, p {
     text-align: center;
     padding-top: 3rem;
     align-self: center;
