--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ ul {
   }
   .grid-container {
     width: 100%;
+    margin: auto;
     /*margin-left: auto;
     margin-right: auto;
     margin-top: auto;
