--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ ul {
     justify-items: center;
     align-self: center;
   }
-  h1, p {
+  .heading {
     text-align: center;
     padding-top: 3rem;
     align-self: center;
