--- a/style.css
+++ b/style.css
@@ -107,12 +107,15 @@ ul {
   .heading {
     padding-top: 3rem;
     align-self: center;
+   
   }
   h1{
     padding: 0 3rem;
+    text-align: center;
   }
   p {
     padding: 0 3rem;
+    text-align: center;
   }
   .mockup {
     width: 80%;
