--- a/style.css
+++ b/style.css
@@ -108,6 +108,9 @@ ul {
     padding-top: 3rem;
      text-align: center;
     }
+  h1, p {
+    margin: auto;
+  }
  
   .mockup {
     width: 80%;
