--- a/style.css
+++ b/style.css
@@ -98,6 +98,10 @@ ul {
 }*/
 @media (max-width: 50rem) {
   .grid-container {
+    -webkit-transform:rotate(120deg);
+    -moz-transform:rotate(120deg);
+    background-repeat:no-repeat;
+    background-position:center;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
