--- a/style.css
+++ b/style.css
@@ -107,8 +107,10 @@ ul {
     margin-right: auto;
     margin-top: auto;
     margin-bottom: auto;
+     position: relative;
   }
   .heading {
+    position: absolute;
     padding-top: 3rem;
      text-align: center;
     }
@@ -117,6 +119,7 @@ ul {
   }
  
   .mockup {
+    position: absolute;
     width: 80%;
     display: block;
     margin-left: auto;
@@ -125,5 +128,8 @@ ul {
   .grid-container {
     display: flex;
     flex-direction: column;
+  }
+  grid-1, grid-2, grid-3 {
+    position: absolute;
   }
 }
