--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   margin-right: auto;
   margin-top: 7rem;
   margin-bottom: auto;
-  justify-content: space-evenly;
+ grid-gap: 2rem;
 }
 
 a,
