--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ ul {
     }
   h1, p {
     aline-self: center;
-    padding: 0 1rem 0;
+    padding: 2rem 1rem 0;
   }
   h1 {
     min-width: 2rem;
