--- a/style.css
+++ b/style.css
@@ -114,12 +114,9 @@ ul {
     }
   h1, p {
     aline-self: center;
-    padding: 2rem 1rem 0;
+    padding: 0 1rem 0;
   }
-  h1 {
-    min-width: 2rem;
-    max-height: 2rem;
-  }
+  
     
   .register {
     padding: 0.4rem 4rem;
