--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ body {
   grid-template-columns: 1fr 1fr;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 7rem;
-  margin-bottom: auto;
+  margin-top: 3.5rem;
+  margin-bottom:3.5rem;
  grid-gap: 4rem;
 }
 
